--- a/templates/header.html
+++ b/templates/header.html
@@ -2,15 +2,30 @@
     <div class="container w-50">
         <div class="d-flex justify-content-center py-3">
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+              <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+            </svg>
                 <li><a href="{% url 'news:home' %}" class="nav-link px-2">Home</a></li>
 
-                     <a href="{% url 'accounts:login'%}">
-                         <button type="button" class="btn btn-primary me-2">Login</button>
-                     </a>
-                     <a href="{% url 'registration' %}">
-                         <button type="button" class="btn btn-outline-primary">Registration</button>
-                     </a>
-            </ul>
-        </div>
+        {% if request.user.is_authenticated %}
+          <li>
+            <a href="{% url 'users:redact_user' users_id=request.user.id %}" class="btn btn-success bs-tooltip-bottom">Profile</a>
+          </li>
+          <li>
+            <a href="{% url 'accounts:logout'%}" class="btn btn-outline-primary">Sign-out</a>
+          </li>
+          <li>
+            <span class="nav-link">Logged in as {{ request.user }}</span>
+          </li>
+        {% else %}
+          <li>
+            <a href="{% url 'accounts:login'%}" class="btn btn-primary me-2">Login</a>
+          </li>
+          <li>
+            <a href="{% url 'registration' %}" class="btn btn-outline-primary">Registration</a>
+          </li>
+        {% endif %}
+      </ul>
     </div>
+  </div>
 </header>
